--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,7 +13,6 @@ body {
   overflow-x: hidden;
 }
 
-/* Header */
 .header {
   width:  100%;
   height: 75px;
@@ -98,9 +97,10 @@ body {
 .navbar .menu-container img {
   width: 150px;
   height: auto;
-}
-.navbar .logo img:hover {
-  color: #6b6b6b;
+
+  &:hover {
+    color: #6b6b6b;
+  }
 }
 .nav-btn div {
   width: 100%;
@@ -141,16 +141,20 @@ body {
 }
 
 .menu-items a {
+  width: 100%;
+  display: flex;
+  justify-content: center;
   text-decoration: none;
   color: #f5f5f5;
   padding: 20px 0 20px 0;
   font-size: 24px;
   transition: color 0.6s;
+
+  &:hover {
+    color: #6b6b6b;
+  }
 }
 
-.menu-items a:hover {
-  color: #6b6b6b;
-}
 
 .nav-btn.active .line1 {
   transform: translate(0, 13px) rotate(45deg);
@@ -230,9 +234,10 @@ h2 {
   color: #f5f5f5;
   text-decoration: none;
   transition: all 0.2s;
-}
-.remember a:hover {
-  color: #6b6b6b;
+ 
+  &:hover {
+    color: #6b6b6b;
+  }
 }
 .remember label {
   font-size: 14px;
@@ -250,8 +255,9 @@ h2 {
   font-size: 18px;
   cursor: pointer;
   transition: all 0.8s;
-}
-.btn:hover {
-  background-color:  #f5f5f5;
-  color: #111111;
+
+  &:hover {
+    background-color:  #f5f5f5;
+    color: #111111;
+  }
 }
